2007-01-29  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* doc/Makefile.am:
	* src/hildon-calendar-popup.c:
	* src/hildon-color-button.c:
	* src/hildon-color-chooser-dialog.h:
	* src/hildon-controlbar.c:
	* src/hildon-date-editor.c:
	* src/hildon-get-password-dialog.c:
	* src/hildon-login-dialog.c:
	* src/hildon-login-dialog.h:
	* src/hildon-note.c:
	* src/hildon-program.c:
	* src/hildon-sort-dialog.c:
	* src/hildon-time-editor.c:
	* src/hildon-time-picker.c:
	* src/hildon-vvolumebar.c:
	* src/hildon-weekday-picker.c:
	* src/hildon-window.c:
	* src/hildon-wizard-dialog.c: Moving the sgml documentation to code.

2007-01-25  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* ./: Big documentation fix mess continued.

2007-01-25  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* ./: Big documentation fix mess.

2007-01-25  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/hildon-sort-dialog.c:
	* src/hildon-sort-dialog.h:
	* src/hildon-time-editor.c:
	* src/hildon-time-picker.c:
	* src/hildon-volumebar-range.c:
	* src/hildon-volumebar.c:
	* src/hildon-vvolumebar.c:
	* src/hildon-weekday-picker.c:
	* src/hildon-window.c:
	* src/hildon-wizard-dialog.c: Cleaning up the documentation.

2007-01-24  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/hildon-program.c:
	* src/hildon-program.h:
	* src/hildon-range-editor.c:
	* src/hildon-seekbar.c:
	* src/hildon-set-password-dialog.c: Cleaing up the documentation.

2007-01-24  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/hildon-get-password-dialog.c:
	* src/hildon-helper.c:
	* src/hildon-hvolumebar.c:
	* src/hildon-login-dialog.c:
	* src/hildon-note.c:
	* src/hildon-note.h:
	* src/hildon-number-editor.c: Cleaning up the documentation.

2007-01-23  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/hildon-defines.h: Removing accidentaly left function prototypes.

	* src/hildon-find-toolbar.c: Fixing documentation for