@@ -1,6 +1,15 @@
 2007-01-29  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 
 
 	* doc/Makefile.am:
+	* src/hildon-hvolumebar.c:
+	* src/hildon-note.c:
+	* src/hildon-number-editor.c:
+	* src/hildon-program.c:
+	* src/hildon-range-editor.c: Moving thesgml documentation to code.
+
+2007-01-29  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 
+
+	* doc/Makefile.am:
 	* src/hildon-calendar-popup.c:
 	* src/hildon-color-button.c:
 	* src/hildon-color-chooser-dialog.h:
